{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 275,
  "lineage": "a7f74fbb-48a3-ac0c-e1c1-33e37eadc8a5",
  "resources": [
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateip1",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0c0a557e7815c9c7e",
            "public_dns": "ec2-34-192-116-194.compute-1.amazonaws.com",
            "public_ip": "34.192.116.194",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Admin-Account-PublicSubnent1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateip2",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-02c5350fc6c8842e1",
            "public_dns": "ec2-54-204-174-0.compute-1.amazonaws.com",
            "public_ip": "54.204.174.0",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Admin-Account-PublicSubnet2"
            },
            "vpc": true
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:751466979087:internet-gateway/igw-0d627a1a32a8d9725",
            "id": "igw-0d627a1a32a8d9725",
            "owner_id": "751466979087",
            "tags": {
              "Name": "Admin-Account_INTERNET GATEWAY"
            },
            "vpc_id": "vpc-032acd4cba4f3d7c5"
          },
          "dependencies": [
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ECS",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs-load-balancer",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:751466979087:loadbalancer/app/ecs-load-balancer/2f068901d1283ce1",
            "arn_suffix": "app/ecs-load-balancer/2f068901d1283ce1",
            "dns_name": "ecs-load-balancer-266206267.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:751466979087:loadbalancer/app/ecs-load-balancer/2f068901d1283ce1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-load-balancer",
            "security_groups": [
              "sg-06fbb5a773a81184f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0119634d6d0eae693"
              },
              {
                "subnet_id": "subnet-0d21cbab5cacd9336"
              }
            ],
            "subnets": [
              "subnet-0119634d6d0eae693",
              "subnet-0d21cbab5cacd9336"
            ],
            "vpc_id": "vpc-032acd4cba4f3d7c5",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.VPC.aws_security_group.PubSG",
            "module.VPC.aws_subnet.PubSub1",
            "module.VPC.aws_subnet.PubSub2",
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ECS",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:751466979087:listener/app/ecs-load-balancer/2f068901d1283ce1/b4f8c09ba25a8f2d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:751466979087:targetgroup/ecs-target-group/83b43ea973eaa896",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:751466979087:listener/app/ecs-load-balancer/2f068901d1283ce1/b4f8c09ba25a8f2d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:751466979087:loadbalancer/app/ecs-load-balancer/2f068901d1283ce1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.ECS.aws_lb.ecs-load-balancer",
            "module.ECS.aws_lb_target_group.ecs-target-group1",
            "module.VPC.aws_security_group.PubSG",
            "module.VPC.aws_subnet.PubSub1",
            "module.VPC.aws_subnet.PubSub2",
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ECS",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs-target-group1",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:751466979087:targetgroup/ecs-target-group/83b43ea973eaa896",
            "arn_suffix": "targetgroup/ecs-target-group/83b43ea973eaa896",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:751466979087:targetgroup/ecs-target-group/83b43ea973eaa896",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecs-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-032acd4cba4f3d7c5"
          },
          "dependencies": [
            "module.ECS.aws_lb.ecs-load-balancer",
            "module.VPC.aws_security_group.PubSG",
            "module.VPC.aws_subnet.PubSub1",
            "module.VPC.aws_subnet.PubSub2",
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natpub1",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0a557e7815c9c7e",
            "id": "nat-0a5fc89a0d3752b9e",
            "network_interface_id": "eni-07573051d8803fcc9",
            "private_ip": "10.0.0.118",
            "public_ip": "34.192.116.194",
            "subnet_id": "subnet-0d21cbab5cacd9336",
            "tags": {
              "Name": "Admin-Account-NatPublicSubnet1"
            }
          },
          "dependencies": [
            "module.VPC.aws_eip.nateip1",
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_subnet.PubSub1",
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natpub2",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c5350fc6c8842e1",
            "id": "nat-0ad8c1a8834a7a3ed",
            "network_interface_id": "eni-03db8908aab429351",
            "private_ip": "10.0.0.183",
            "public_ip": "54.204.174.0",
            "subnet_id": "subnet-0119634d6d0eae693",
            "tags": {
              "Name": "Admin-Account-NatPublicSubnet2"
            }
          },
          "dependencies": [
            "module.VPC.aws_eip.nateip2",
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_subnet.PubSub2",
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "sbnacl",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:751466979087:network-acl/acl-09a4914297e6fb546",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09a4914297e6fb546",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "751466979087",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0119634d6d0eae693",
              "subnet-035aab05eb99044fc",
              "subnet-04cab0f748ff62b03",
              "subnet-0d21cbab5cacd9336"
            ],
            "tags": {
              "Name": "Admin-Account-NACL "
            },
            "vpc_id": "vpc-032acd4cba4f3d7c5"
          },
          "dependencies": [
            "module.VPC.aws_subnet.PriSub1",
            "module.VPC.aws_subnet.PriSub2",
            "module.VPC.aws_subnet.PubSub1",
            "module.VPC.aws_subnet.PubSub2",
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route1",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0111706b5018b2ab71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0a5fc89a0d3752b9e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0111706b5018b2ab7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.VPC.aws_eip.nateip1",
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_nat_gateway.natpub1",
            "module.VPC.aws_route_table.private_route_table1",
            "module.VPC.aws_subnet.PubSub1",
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route2",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f6fdce1a9c450b1b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0ad8c1a8834a7a3ed",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f6fdce1a9c450b1b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.VPC.aws_eip.nateip2",
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_nat_gateway.natpub2",
            "module.VPC.aws_route_table.private_route_table2",
            "module.VPC.aws_subnet.PubSub2",
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "pub_route",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d627a1a32a8d9725",
            "id": "r-rtb-0fbca85cf4d1657fd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fbca85cf4d1657fd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_route_table.pubroutetable",
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table1",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0111706b5018b2ab7",
            "owner_id": "751466979087",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Admin-Account-PrivateSubnet1RouteTable"
            },
            "vpc_id": "vpc-032acd4cba4f3d7c5"
          },
          "dependencies": [
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table2",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f6fdce1a9c450b1b",
            "owner_id": "751466979087",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Admin-Account-PrivateSubnet2RouteTable"
            },
            "vpc_id": "vpc-032acd4cba4f3d7c5"
          },
          "dependencies": [
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubroutetable",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fbca85cf4d1657fd",
            "owner_id": "751466979087",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Admin-Account_PublicRouteTable"
            },
            "vpc_id": "vpc-032acd4cba4f3d7c5"
          },
          "dependencies": [
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association1",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a7699094f4805bf",
            "route_table_id": "rtb-0111706b5018b2ab7",
            "subnet_id": "subnet-04cab0f748ff62b03"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private_route_table1",
            "module.VPC.aws_subnet.PriSub1",
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association2",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf37e07e3d8084a3",
            "route_table_id": "rtb-0f6fdce1a9c450b1b",
            "subnet_id": "subnet-035aab05eb99044fc"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private_route_table2",
            "module.VPC.aws_subnet.PriSub2",
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association1",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02546d667f045a170",
            "route_table_id": "rtb-0fbca85cf4d1657fd",
            "subnet_id": "subnet-0d21cbab5cacd9336"
          },
          "dependencies": [
            "module.VPC.aws_route_table.pubroutetable",
            "module.VPC.aws_subnet.PubSub1",
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association2",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe259dc40eecacf3",
            "route_table_id": "rtb-0fbca85cf4d1657fd",
            "subnet_id": "subnet-0119634d6d0eae693"
          },
          "dependencies": [
            "module.VPC.aws_route_table.pubroutetable",
            "module.VPC.aws_subnet.PubSub2",
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PubSG",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:751466979087:security-group/sg-06fbb5a773a81184f",
            "description": "Allow all http,rdp and ssh conection from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06fbb5a773a81184f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20200703042812940700000003",
            "name_prefix": null,
            "owner_id": "751466979087",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Admin-Account-PublicSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-032acd4cba4f3d7c5"
          },
          "dependencies": [
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PriSub1",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:751466979087:subnet/subnet-04cab0f748ff62b03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/25",
            "id": "subnet-04cab0f748ff62b03",
            "map_public_ip_on_launch": false,
            "owner_id": "751466979087",
            "tags": {
              "Name": "Admin-Account-PrivateSubnet1"
            },
            "vpc_id": "vpc-032acd4cba4f3d7c5"
          },
          "dependencies": [
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PriSub2",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:751466979087:subnet/subnet-035aab05eb99044fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.128/25",
            "id": "subnet-035aab05eb99044fc",
            "map_public_ip_on_launch": false,
            "owner_id": "751466979087",
            "tags": {
              "Name": "Admin-Account-PrivateSubnet2"
            },
            "vpc_id": "vpc-032acd4cba4f3d7c5"
          },
          "dependencies": [
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PubSub1",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:751466979087:subnet/subnet-0d21cbab5cacd9336",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/25",
            "id": "subnet-0d21cbab5cacd9336",
            "map_public_ip_on_launch": true,
            "owner_id": "751466979087",
            "tags": {
              "Name": "Admin-Account-PublicSubnet1"
            },
            "vpc_id": "vpc-032acd4cba4f3d7c5"
          },
          "dependencies": [
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PubSub2",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:751466979087:subnet/subnet-0119634d6d0eae693",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.128/25",
            "id": "subnet-0119634d6d0eae693",
            "map_public_ip_on_launch": true,
            "owner_id": "751466979087",
            "tags": {
              "Name": "Admin-Account-PublicSubnet2"
            },
            "vpc_id": "vpc-032acd4cba4f3d7c5"
          },
          "dependencies": [
            "module.VPC.aws_vpc.sbvpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sbvpc",
      "provider": "provider.aws.Admin-Account",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:751466979087:vpc/vpc-032acd4cba4f3d7c5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/23",
            "default_network_acl_id": "acl-0d81ed1a41bc74648",
            "default_route_table_id": "rtb-0508f017309125ff4",
            "default_security_group_id": "sg-09e8ede555202845f",
            "dhcp_options_id": "dopt-002f8f2c222b6bf1a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-032acd4cba4f3d7c5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0508f017309125ff4",
            "owner_id": "751466979087",
            "tags": {
              "Name": "Admin-Account-VPC"
            }
          }
        }
      ]
    }
  ]
}